Update Organization data models (#9088)
