# airbyte-commons-server/src/main/java/io/airbyte/commons/server/handlers/OrganizationsHandler.java
@@ -32,7 +32,7 @@ import org.slf4j.LoggerFactory;
 
 /**
  * OrganizationHandler for handling organization resource related operation.
- *
+ * <p>
  * Javadocs suppressed because api docs should be used as source of truth.
  */
 @SuppressWarnings("MissingJavadocMethod")
@@ -60,11 +60,15 @@ public class OrganizationsHandler {
     final String email = organizationCreateRequestBody.getEmail();
     final UUID userId = organizationCreateRequestBody.getUserId();
     final UUID orgId = uuidGenerator.get();
+    final Boolean pba = organizationCreateRequestBody.getPba() != null && organizationCreateRequestBody.getPba();
+    final Boolean orgLevelBilling = organizationCreateRequestBody.getOrgLevelBilling() != null && organizationCreateRequestBody.getOrgLevelBilling();
     Organization organization = new Organization()
         .withOrganizationId(orgId)
         .withName(organizationName)
         .withEmail(email)
-        .withUserId(userId);
+        .withUserId(userId)
+        .withPba(pba)
+        .withOrgLevelBilling(orgLevelBilling);
     organizationPersistence.createOrganization(organization);
     // Also create an OrgAdmin permission.
     final Permission orgAdminPermission = new Permission()
@@ -84,6 +88,15 @@ public class OrganizationsHandler {
     boolean hasChanged = false;
     if (!organization.getName().equals(organizationUpdateRequestBody.getOrganizationName())) {
       organization.setName(organizationUpdateRequestBody.getOrganizationName());
+      hasChanged = true;
+    }
+    if (organizationUpdateRequestBody.getPba() != null && !organization.getPba().equals(organizationUpdateRequestBody.getPba())) {
+      organization.setPba(organizationUpdateRequestBody.getPba());
+      hasChanged = true;
+    }
+    if (organizationUpdateRequestBody.getOrgLevelBilling() != null && !organization.getOrgLevelBilling()
+        .equals(organizationUpdateRequestBody.getOrgLevelBilling())) {
+      organization.setOrgLevelBilling(organizationUpdateRequestBody.getOrgLevelBilling());
       hasChanged = true;
     }
     if (hasChanged) {
@@ -129,7 +142,9 @@ public class OrganizationsHandler {
     return new OrganizationRead()
         .organizationId(organization.getOrganizationId())
         .organizationName(organization.getName())
-        .email(organization.getEmail());
+        .email(organization.getEmail())
+        .pba(organization.getPba())
+        .orgLevelBilling(organization.getOrgLevelBilling());
   }
 
 }
